syntax = "proto3";

package org.infinispan.remoting.transport.jgroups;

import "org.jgroups.stack.proto";
import "org.jgroups.util.proto";

// IDs: 134

/**
 * @TypeId(134)
 */
message JGroupsAddress {
	oneof address {
		org.jgroups.util.UUID	uuidAddress	= 1;
		org.jgroups.stack.IpAddress	ipAddress	= 2;
	}
}
