syntax = "proto3";

package org.wildfly.clustering.server.infinispan;

import "org.infinispan.remoting.transport.proto";
import "org.infinispan.remoting.transport.jgroups.proto";

// IDs: 132 - 133

/**
 * @TypeId(132)
 */
message EmbeddedCacheManagerGroupMember {
	org.infinispan.remoting.transport.jgroups.JGroupsAddress	address	= 1;
}

/**
 * @TypeId(133)
 */
message LocalEmbeddedCacheManagerGroupMember {
	string	name	= 1;
}
